# llm-english-study-audio-sentece-creator

./: .gitignore  2_gemini_separate_senteces_final.ipynb  2_separate_senteces_batch.ipynb  3_create_new_sentences_batch.ipynb  3_gemini_new_sentences.ipynb  4_generate_text_to_speech.ipynb  5_join_audio_files.ipynb  6_convert_to_mp3.ipynb  README.md  gemini_new_sentences.ipynb  gemini_separate_senteces.ipynb  gemini_separate_senteces_final.ipynb  prompt.md  pyproject.toml  transcript.csv  transcript_new_sentences.csv  transcript_separated.csv  whisper.ipynb  whisper_batch.ipynb  whisper_batch_2.ipynb  whisper_batch_final.ipynb
data_transcript/: Wizard-Lesson 1-01.wma
old/: transcript copy 2.csv  transcript copy.csv  transcript_separated.csv
tests/: SpeechT5ForTextToSpeech_test.ipynb  prompts.md  teste_g4f.ipynb  whisper_batch_1.ipynb
