[tool.poetry]
name = "speech-recognition"
version = "0.1.0"
description = ""
authors = ["rhuanbarros <rhuanbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
transformers = "^4.39.3"
ipykernel = "^6.29.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
