[tool.poetry]
name = "speech-recognition"
version = "0.1.0"
description = ""
authors = ["rhuanbarros <rhuanbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
transformers = "^4.39.3"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
g4f = "^0.3.0.1"
langchain-g4f = {git = "https://github.com/MIDORIBIN/langchain-gpt4free.git"}
sentencepiece = "^0.2.0"
datasets = {extras = ["audio"], version = "^2.19.0"}
torch = "^2.3.0"
ipywidgets = "^8.1.2"
iprogress = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
